--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "This project will be used to learn about tests technics and pipeline",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon",
-    "build": "rimraf ./build && tsc",
-    "start": "npm run build && node build/index.js"
+    "start:dev": "nodemon src/server.ts",
+    "build": ""
   },
   "repository": {
     "type": "git",
@@ -21,10 +19,13 @@
   },
   "homepage": "https://github.com/walterInacio/CRUD#readme",
   "devDependencies": {
-    "@types/node": "^17.0.8",
     "nodemon": "^2.0.15",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.4.0",
+    "@types/express": "^4.17.1",
+    "sucrase": "^3.20.3",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "eslint": "^8.7.0",
+    "express": "^4.17.1"
   }
 }
