--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
-  "name": "crud",
-  "version": "1.0.0",
-  "description": "This project will be used to learn about tests technics and pipeline",
-  "main": "index.js",
-  "scripts": {
-    "start:dev": "nodemon src/server.ts",
-    "build": ""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/walterInacio/CRUD.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/walterInacio/CRUD/issues"
-  },
-  "homepage": "https://github.com/walterInacio/CRUD#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.15",
-    "@types/express": "^4.17.1",
-    "sucrase": "^3.20.3",
-    "typescript": "^4.5.4"
-  },
-  "dependencies": {
-    "eslint": "^8.7.0",
-    "express": "^4.17.1"
-  }
+   "name": "crud",
+   "version": "1.0.0",
+   "description": "This project will be used to learn about tests technics and pipeline",
+   "main": "index.js",
+   "scripts": {
+      "start:dev": "nodemon src/index.ts",
+      "build": "",
+      "start": "ts-node src/index.ts",
+      "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
+      "migration:generate": "yarn run typeorm -- migration:generate --config ormconfig.json --connection  --name ",
+      "migration:run": "yarn run typeorm -- migration:run"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/walterInacio/CRUD.git"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/walterInacio/CRUD/issues"
+   },
+   "homepage": "https://github.com/walterInacio/CRUD#readme",
+   "devDependencies": {
+      "@types/express": "^4.17.13",
+      "@types/node": "^17.0.15",
+      "nodemon": "^2.0.15",
+      "sucrase": "^3.20.3",
+      "typescript": "^4.5.5"
+   },
+   "dependencies": {
+      "@types/body-parser": "^1.19.2",
+      "body-parser": "^1.19.1",
+      "eslint": "^8.7.0",
+      "express": "^4.17.1",
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.10",
+      "ts-node": "^10.4.0",
+      "typeorm": "0.2.41"
+   }
 }
