--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
    "description": "This project will be used to learn about tests technics and pipeline",
    "main": "index.js",
    "scripts": {
-      "start:dev": "nodemon src/index.ts",
-      "build": "",
+      "dev": "ts-node-dev --inspect=0.0.0.0:7001 -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+      "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
       "start": "ts-node src/index.ts",
       "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
       "migration:generate": "yarn run typeorm -- migration:generate --config ormconfig.json --connection  --name ",
-      "migration:run": "yarn run typeorm -- migration:run"
+      "migration:run": "yarn run typeorm -- migration:run",
+      "test": "jest"
    },
    "repository": {
       "type": "git",
@@ -23,20 +24,36 @@
    },
    "homepage": "https://github.com/walterInacio/CRUD#readme",
    "devDependencies": {
-      "@types/express": "^4.17.13",
-      "@types/node": "^17.0.15",
-      "nodemon": "^2.0.15",
-      "sucrase": "^3.20.3",
-      "typescript": "^4.5.5"
+      "@babel/cli": "^7.10.1",
+      "@babel/core": "^7.10.2",
+      "@babel/node": "^7.10.1",
+      "@babel/preset-env": "^7.10.2",
+      "@babel/preset-typescript": "^7.10.1",
+      "@types/express": "^4.17.6",
+      "@types/jest": "^26.0.0",
+      "@typescript-eslint/eslint-plugin": "^3.3.0",
+      "@typescript-eslint/parser": "^3.3.0",
+      "babel-plugin-module-resolver": "^4.0.0",
+      "eslint": "^8.11.0",
+      "eslint-config-prettier": "^8.5.0",
+      "eslint-config-standard": "^16.0.3",
+      "eslint-plugin-import": "^2.25.4",
+      "eslint-plugin-node": "^11.1.0",
+      "eslint-plugin-prettier": "^4.0.0",
+      "eslint-plugin-promise": "^6.0.0",
+      "eslint-plugin-standard": "^5.0.0",
+      "jest": "^27.5.1",
+      "prettier": "^2.5.1",
+      "ts-jest": "^27.1.3",
+      "ts-node-dev": "^1.1.8",
+      "tsconfig-paths": "^3.14.0",
+      "typescript": "^4.6.2"
    },
    "dependencies": {
-      "@types/body-parser": "^1.19.2",
-      "body-parser": "^1.19.1",
-      "eslint": "^8.7.0",
-      "express": "^4.17.1",
-      "mysql": "^2.14.1",
-      "reflect-metadata": "^0.1.10",
-      "ts-node": "^10.4.0",
-      "typeorm": "0.2.41"
+      "express": "^4.17.3",
+      "http-status-codes": "^2.2.0",
+      "mysql": "^2.18.1",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "^0.2.45"
    }
 }
