--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
       "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
       "start": "ts-node src/index.ts",
       "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
-      "migration:generate": "yarn run typeorm -- migration:generate --config ormconfig.json --connection  --name ",
+      "migration:generate": "yarn run typeorm -- migration:generate --config ./src/config/ormconfig.json -n MyMigrationsClass",
       "migration:run": "yarn run typeorm -- migration:run",
       "test": "jest"
    },
