--- a/src/config/ormconfig.json
+++ b/src/config/ormconfig.json
@@ -5,7 +5,7 @@
    "username": "root",
    "password": "password",
    "database": "test",
-   "synchronize": true,
+   "synchronize": false,
    "logging": false,
    "entities": [
        "src/models/*.ts"
